# LinkGuard

./: .gitignore  PROJECT.md  README.md
apps/api/: pyproject.toml
apps/api/app/: domain.py  main.py
apps/api/app/routes/: dispatch.py  incidents.py  monitors.py
apps/api/app/services/: checker.py  dispatcher.py  monitoring.py  repository.py
apps/api/tests/: conftest.py  test_health.py  test_incident_transitions.py  test_monitor_lifecycle.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.jsx  App.tsx  OperatorView.jsx  api.js  styles.css
docs/: architecture.md  backend.md  build-in-public.md  decision-log.md
infra/terraform/: README.md  main.tf  variables.tf
