[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkguard-api"
version = "0.1.0"
description = "FastAPI backend for LinkGuard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "mangum>=0.19,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
